language/move-lang/tests/move_check/parser/number_literal_too_long.move
module M {
    fun foo() {
        340282366920938463463374607431768211456;
    }
}
